Fixed main page text alignment, added semicolon

--- a/homepage.css
+++ b/homepage.css
@@ -93,4 +93,4 @@ article{padding: 15px;
 #mainImg2{padding: 5px;
     width: 30%;
     float: right;
-    height: auto}
+    height: auto;}
